Fixes wrapping in step one

--- a/retirement_api/static/css/claiming.css
+++ b/retirement_api/static/css/claiming.css
@@ -299,7 +299,7 @@ form {
 }
 
 #claiming-social-security #step-one-form {
-  margin: 0;
+  padding: 0;
 }
 
 #claiming-social-security .compared-to-full {
